add spring-cloud-cli-v21